# DeepCompress

./: .gitignore  CLAUDE.md  LICENSE  NOTES.txt  README.md  create_tests.sh  pyproject.toml  pytest.ini  requirements.txt  restructure-project.sh  setup.py
DeepCompress/: README.md
env/: pyvenv.cfg
src/: attention_context.py  benchmarks.py  channel_context.py  cli_train.py  colorbar.py  compress_octree.py  config.yml  constants.py  context_model.py  data_loader.py  ds_mesh_to_pc.py  ds_pc_octree_blocks.py  ds_select_largest.py  entropy_model.py  entropy_parameters.py  ev_compare.py  ev_experiment.yml  ev_run_experiment.py  ev_run_render.py  evaluation_pipeline.py  experiment.py  file_io.py  map_color.py  model_opt.py  model_transforms.py  mp_report.py  mp_run.py  octree_coding.py  parallel_process.py  patch_gaussian_conditional.py  pc_metric.py  point_cloud_metrics.py  precision_config.py  quick_benchmark.py  tr_train.py  training_pipeline.py
tests/: conftest.py  test_attention_context.py  test_benchmarks.py  test_causality.py  test_channel_context.py  test_colorbar.py  test_compress_octree.py  test_context_model.py  test_data_loader.py  test_data_pipeline.py  test_ds_mesh_to_pc.py  test_ds_pc_octree_blocks.py  test_ds_select_largest.py  test_entropy_correctness.py  test_entropy_model.py  test_entropy_parameters.py  test_ev_compare.py  test_ev_run_experiment.py  test_ev_run_render.py  test_evaluation_pipeline.py  test_experiment.py  test_integration.py  test_map_color.py  test_model_opt.py  test_model_transforms.py  test_mp_report.py  test_mp_run.py  test_numerical.py  test_octree_coding.py  test_parallel_process.py  test_patch_gaussian_conditional.py  test_pc_metric.py  test_performance.py  test_point_cloud_metrics.py  (+5 more)
(+4 files in other folders)
